--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Needs Access to let You pick Image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Needs Access to let You pick Image</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Needs Access to let You pick Image</string>
 </dict>
 </plist>
