--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,12 +27,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  cloud_firestore: ^0.13.5
-  firebase_auth: ^0.16.1
-  image_picker: ^0.6.5+3
-  firebase_storage: ^3.1.5
-  firebase_messaging: 
+  cupertino_icons: ^1.0.5
+  cloud_firestore:
+  firebase_core: ^1.17.1
+  firebase_auth:
+  image_picker: ^0.8.5+3
+  firebase_storage:
+  firebase_messaging:
 
 dev_dependencies:
   flutter_test:
